--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.19.0",
     "aceternity-ui": "^0.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
