--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
